[package]
name = "web-canvas-window-handle"
version = "0.1.0"
authors = ["couyit onlylinetibisou@gmail.com"]
edition = "2018"
repository = "https://github.com/couyit/WGPUSurfaceSharingWASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"
wgpu-core = { version = "0.21.1", features = ["raw-window-handle"] }
raw-window-handle = "0.6.2"
web-sys = { version="0.3.69", features = ["HtmlCanvasElement"] }
wgpu-types = { version = "0.20.0", features = ["serde"] }
serde = "1.0.204"
serde_json = "1.0.120"
serde_derive = "1.0.204"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
